# correa

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Clustering.sh  CompareAll.sh  DISTANCES.md  Doxyfile  LICENSE  LICENSE.md  Makefile  Makefile-cpp  README.md  TODO.md  changelog.md  cmake_install.cmake  compile_commands.json  correa-test.py  main.py  md_LICENSE.html  oldcmake.txt  pyproject.toml  setup.py  test.py  test_function_call.py
.github/workflows/: bindings.yml  documentation.yml  executables.yml  main.yml  static.yml  tests.yml
bindings/: CMakeLists.txt
bindings/correa/: __init__.py
docs/html/: 2_d_shape_8h_source.html  __correa_8cpp.html  _comp2_d_8h_source.html  _comp2_d_shapes_8cpp.html  _comp2_d_shapes_8h_source.html  _comp2_d_shapes_focal_8h_source.html  _component_8h_source.html  _conj_grad_o_t_8h_source.html  _convex_8h_source.html  _curvature_8h.html  _curvature_8h_source.html  _ellipse_8h_source.html  _frechet_8h_source.html  _in_out_8h_source.html  _mat_in_out_8h_source.html  _o_t1_8h_source.html  _p_h0_8h_source.html  _polygon_8h_source.html  _polygon_builder_8h_source.html  _types_8h_source.html  _vector2_d_8h_source.html  _vector_8h_source.html  _vector_ops_8h_source.html  _vertex_8h_source.html  _x01-_prefixed_macros_8cpp.html  _x02-_disabled_macros_8cpp.html  _x05-_deferred_static_checks_8cpp.html  _x10-_fallback_stringifier_8cpp.html  _x11-_disable_stringification_8cpp.html  _x12-_custom_debug_break_macro_8cpp.html  _x21-_partial_test_case_events_8cpp.html  _x22-_benchmarks_in_cumulative_reporter_8cpp.html  _x23-_casing_in_reporter_names_8cpp.html  _x24-_listener_stdout_capture_in_multireporter_8cpp.html  _x25-_listener_can_ask_for_captured_stdout_8cpp.html  _x26-_reporter_preferences_for_passing_assertions_is_respected_8cpp.html  _x27-_captured_stdout_in_test_case_events_8cpp.html  _x28-_listeners_get_events_before_reporters_8cpp.html  _x31-_duplicated_test_cases_8cpp.html  _x32-_duplicated_test_cases_different_tags_8cpp.html  (+877 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_4.js  all_7.js  all_8.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+66 more)
docs/latex/: 2_d_shape_8h_source.tex  __correa_8cpp.tex  _comp2_d_8h_source.tex  _comp2_d_shapes_8cpp.tex  _comp2_d_shapes_8h_source.tex  _comp2_d_shapes_focal_8h_source.tex  _component_8h_source.tex  _conj_grad_o_t_8h_source.tex  _convex_8h_source.tex  _curvature_8h.tex  _curvature_8h_source.tex  _ellipse_8h_source.tex  _frechet_8h_source.tex  _in_out_8h_source.tex  _mat_in_out_8h_source.tex  _o_t1_8h_source.tex  _p_h0_8h_source.tex  _polygon_8h_source.tex  _polygon_builder_8h_source.tex  _types_8h_source.tex  _vector2_d_8h_source.tex  _vector_8h_source.tex  _vector_ops_8h_source.tex  _vertex_8h_source.tex  _x01-_prefixed_macros_8cpp.tex  _x02-_disabled_macros_8cpp.tex  _x05-_deferred_static_checks_8cpp.tex  _x10-_fallback_stringifier_8cpp.tex  _x11-_disable_stringification_8cpp.tex  _x12-_custom_debug_break_macro_8cpp.tex  _x21-_partial_test_case_events_8cpp.tex  _x22-_benchmarks_in_cumulative_reporter_8cpp.tex  _x23-_casing_in_reporter_names_8cpp.tex  _x24-_listener_stdout_capture_in_multireporter_8cpp.tex  _x25-_listener_can_ask_for_captured_stdout_8cpp.tex  _x26-_reporter_preferences_for_passing_assertions_is_respected_8cpp.tex  _x27-_captured_stdout_in_test_case_events_8cpp.tex  _x28-_listeners_get_events_before_reporters_8cpp.tex  _x31-_duplicated_test_cases_8cpp.tex  _x32-_duplicated_test_cases_different_tags_8cpp.tex  (+634 more)
examples/: contour1.csv  contour2.csv  contour3.csv  contour6.csv
include/: 2DShape.h  Comp2D.h  Comp2DShapes.h  Comp2DShapesFocal.h  correa_bindings.h
include/Curvature/include/: Curvature.h
include/DataStruct/include/: Polygon.h  PolygonBuilder.h  Types.h  Vector.h  Vector2D.h  Vertex.h
include/InOut/include/: InOut.h  MatInOut.h
include/Metrics/include/: Convex.h  Ellipse.h  Frechet.h
include/OT1/include/: VectorOps.h
include/PH0/include/: Component.h  PH0.h  PersistenceDiagram.h
project/Clustering/include/: kMeans.h
project/Curvature/include/: Curvature.h
project/DataStruct/include/: Polygon.h  PolygonBuilder.h  Types.h  Vector2D.h  Vertex.h
project/InOut/include/: MatInOut.h  PDInOut.h
project/Metrics/include/: Convex.h  Frechet.h
project/OT1/include/: VectorOps.h
project/PH0/include/: Hungarian.h  PH0.h  PersistenceDiagram.h
project/include/: 2DShape.h  correa_bindings.h
project/src/: 2DShape.cpp  Clustering.cpp  Comp2DShapes.cpp  GUI.cpp  correa.cpp  test.cpp
src/: 2DShape.cpp  CMakeLists.txt  Comp2D.cpp  Comp2DShapes.cpp  Comp2DShapesFocal.cpp  Makefile  _correa.cpp  correa.cpp  correa.py  correa_bindings.h  gui.py  test.cpp  test2DShape.cpp
src/Curvature/include/: Curvature.h
src/DataStruct/include/: Polygon.h  PolygonBuilder.h  Types.h  Vector.h  Vector2D.h
src/InOut/include/: InOut.h
src/Metrics/include/: Ellipse.h
src/OT1/include/: ConjGradOT.h  OT1.h
src/PH0/include/: Component.h  PH0.h  PersistenceDiagram.h
src/include/: Clustering.h  Comp2DShapes.h  GUI.h  correa_bindings.h
test/: README.md  TESTING.md  conftest.py  demo_focal_warning.py  pytest.ini  requirements.txt  run_tests.sh  test_basic_functionality.py  test_focal_point_validation.py  tests.py
